# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  index.rs
tests/common/: mod.rs
