[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.35"
config = "0.14.0"
reqwest = "0.11.26"
serde = { version = "1.0.197", features = ["derive"] }
smart-default = "0.7.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "postgres",
    "tls-rustls",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
    "migrate",
]
